Fixing layout bugs on role_management

--- a/public/designs/environments/templates/default/stylesheets/main.sass
+++ b/public/designs/environments/templates/default/stylesheets/main.sass
@@ -294,14 +294,16 @@ div.left
       display: inline
       align: center
 
-form.edit_survey ul
-  clear: both
-  li, .heading
-    display: inline
-    float: left
-    clear: none
-  .heading
-    margin-right: 20px
+#role_management
+  float: left
+  form ul
+    clear: both
+    li, .heading
+      display: inline
+      float: left
+      clear: none
+    .heading
+      margin-right: 20px
 
 div.wrap_right
   margin-left: 160px !important
